16596
```scala
import scala.util.continuations._
object Foo {
	def bar[A](s: Seq[() => A @suspendable]) {}
	def main(args: Array[String]) {
		bar[Option[Int]](Seq(
			{ () =>
				shiftUnit0[None.type, Unit](None)
			}, { () =>
				shiftUnit0[Some[Int], Unit](Some(123))
			} ))
	}
}
```
```scala
$ scalac -P:continuations:enable Foo.scala
Foo.scala:6: error: type mismatch;
 found   : () => None.type @scala.util.continuations.cpsParam[Unit,Unit]
 required: () => Option[Int]
                        { () =>
                             ^
Foo.scala:8: error: type mismatch;
 found   : () => Some[Int] @scala.util.continuations.cpsParam[Unit,Unit]
 required: () => Option[Int]
                        }, { () =>
                                ^
Foo.scala:5: error: type mismatch;
 found   : Seq[() => Option[Int]]
 required: Seq[() => Option[Int] @scala.util.continuations.cpsParam[Unit,Unit]]
                bar[Option[Int]](Seq(
                                    ^
three errors found
```
